fixed the overflow problem

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,7 +46,7 @@ header {
   h1 {
     text-align: center;
     font-size: 3rem;
-    margin: 3rem 0;
+    margin: 0 0 2rem 0;
     color: $primary-color;
     font-weight: 200;
   }
